# isotopes

./: .env  Cargo.toml  README.md  ROADMAP.md  configuration.yaml
.github/workflows/: blank.yml  general_build.yml
migrations/: 20241013074559_create_subscriptions_table.sql  20241024051838_create_ai_modules.sql  20241024051839_create_raw_modules.sql  20241024051840_create_machines.sql
scripts/: init_db.sh  seed_data.sh
src/: configuration.rs  lib.rs  main.rs  models.rs  retry.rs  startup.rs  subscription_service.rs
src/routes/: health_check.rs  subscriptions.rs
test/: integration_test.rs
tests/: health_check.rs  integration_test.rs
