[package]
name = "isotopes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "isotopes"

[dependencies]
actix-web = "4.9.0"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
serde = {version = "1.0.130", features = ["derive"]}
[dev-dependencies]
reqwest = "0.12.7"

