[package]
name = "isotopes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "isotopes"

[dependencies]
actix-web = "4.9.0"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
serde = {version = "1.0.130", features = ["derive"]}
config = "0.14.0"
uuid = { version="1.10.0", features = ["v4"] }
chrono = { version = "0.4.19", default-features = false, features = ["clock"] }
serde_json = "1.0.128"
env_logger = "0.11.5"
log = "0.4.22"
[dev-dependencies]
reqwest = { version = "0.12.7", features = ["json"] }

[dependencies.sqlx]
version = "0.8.0"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
